2012-05-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the tmalloc demo.

	* demo/tmalloc.c: Add an empty interval to show the overhead of
	measurement (necessary since malloc/free are now quite low
	latency).

2012-05-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the roman demo.

	* demo/roman.c: Import the roman printing code since it is not
	part of the SL library any more.

2012-05-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the checkers demo.

	* demo/checkers.c: Fix the loop ierations to fit in the configured
	resolutions (10x10).

2011-06-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Adjust the benchmarks for use with fixed-size framebuffers.

	* benchmarks/mandel/mandel.d2,
	* demo/ca1d_demo.c,
	* demo/ca1d_main.c,
	* demo/checkers.c: Use the fixed size 100x100.

2011-06-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the `keyblit' demo.

	* demo/keyblit.c: Match the key (background), not the foreground.

2011-06-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the LL benchmarks containing dependent loops.

	* benchmarks/livermore/kernel3.c: Use the new place identifier
	semantics from MGSim to ensure a distribution across cores.

	* benchmarks/livermore/kernel4.c: Place each dependent loop on the
	same core as its parent.

	* benchmarks/livermore/kernel6.c,
	* benchmarks/livermore/kernel23.c: Place the singleton families
	using the balanced strategy.

	* benchmarks/livermore/ll-generate.py: Include `<svp/delegate.h>'
	in the generated code.

2011-04-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the `matmul' benchmark.

	* matmul/simple.c: Use work interval number 1, as per the latest
	Unibench benchmark spec.

2011-04-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the `matmul' benchmark.

	* matmul/simple.c: Ensure that each multiply phase has an output
	matrix distinct from the input.
	
	* matmul/Makefile.am (.c.tar): Add a rule to generate Unibench
	archives.

	* matmul/input.d10,